[package]
name = "msgrpc"
version = "0.1.0"
authors = ["trivernis <trivernis@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rmp = "0.8.9"
rmp-serde = "0.14.4"
crc = "1.8.1"
serde = "1.0.115"
byteorder = "1.3.4"